@@ -30,7 +30,6 @@
 
 
 #include "avr.h"
-#include "config.h"
 #include "lists.h"
 #include "pindefs.h"
 #include "ppi.h"
